draw wkt geometries

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,4 +12,6 @@ html
 
         script(type="text/javascript").
             var map = new Map();
-            map.requestGeometries();
+            map.requestWktGeometries().then( (geometries)=>{
+                map.drawWktGeometries(geometries); 
+            });
