defined mvt rest endpoint

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,6 @@ html
 
         script(type="text/javascript").
             var map = new Map();
-            map.requestWktGeometries().then( (geometries)=>{
-                map.drawWktGeometries(geometries); 
-            });
+            /*map.requestWktGeometries().then( (geometries)=>{*/
+                /*map.drawWktGeometries(geometries); */
+            /*});*/
